--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Web store</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/sprite.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,7 +23,132 @@
     <![endif]-->
 </head>
 <body>
-<h1>Hello, world!</h1>
+<!-- HEADER START -->
+    <header>
+        <div class="top-header">
+            <div class="container">
+                <div class="flex-container justify-sp-between">
+                    <ul class="phone-list flex-container aling-center">
+                        <li class="flex-container aling-center"><span class="custom-icon icon-mail-ic"></span>info@shopy.com</li>
+                        <li class="flex-container aling-center"><span class="custom-icon icon-phone-book-ic"></span>996 - 5553 - 453</li>
+                    </ul>
+                    <nav class="social-nav">
+                        <a href=""><i class="fa fa-facebook"></i></a>
+                        <a href=""><i class="fa fa-twitter"></i></a>
+                        <a href=""><i class="fa fa-google-plus"></i></a>
+                        <a href=""><i class="fa fa-instagram"></i></a>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <div class="bottom-header">
+            <div class="container">
+                <div class="flex-container justify-sp-between aling-center">
+                    <div class="logo">
+                        <img src="img/logo.png">
+                    </div>
+                    <ul class="header-nav flex-container">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Products</a></li>
+                        <li><a href="">Hot Deals</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                    <div class="user-controls flex-container">
+                        <a href=""><div class="user-controls-icon icon-search-ic"></div></a>
+                        <a href=""><div class="user-controls-icon icon-user-ic"></div></a>
+                        <a href=""><div class="user-controls-icon icon-cart-hover-ic"></div></a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </header>
+<!-- HEADER END -->
+<!-- MAIN START -->
+    <main>
+        <section class="items-carousel flex-container aling-center">
+            <div class="container">
+                <div class="flex-container">
+                    <div class="items-carousel-description">
+                        <div class="title big orange-text">
+                            <span>FULL WINTER KIT</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="default-section">
+            <div class="container">
+                <div class="title text-center">
+                    <span><span class="orange-text">NEW</span>ARRIVALS</span>
+                </div>
+                <span class="subtitle text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                <div class="new-item">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="item">
+                                <div class="item-img">
+                                    <a href=""><img src="img/product-Img.png"></a>
+                                </div>
+                                <div class="item-title">
+                                    <a href="">Reebok Track Jacket</a>
+                                </div>
+                                <div class="item-price">
+                                    <span>100$</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="item">
+                                <div class="item-img">
+                                    <a href=""><img src="img/product-Img.png"></a>
+                                </div>
+                                <div class="item-title">
+                                    <a href="">Reebok Track Jacket</a>
+                                </div>
+                                <div class="item-price">
+                                    <span>100$</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="item">
+                                <div class="item-img">
+                                    <a href=""><img src="img/product-Img.png"></a>
+                                </div>
+                                <div class="item-title">
+                                    <a href="">Reebok Track Jacket</a>
+                                </div>
+                                <div class="item-price">
+                                    <span>100$</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="item">
+                                <div class="item-img">
+                                    <a href=""><img src="img/product-Img.png"></a>
+                                </div>
+                                <div class="item-title">
+                                    <a href="">Reebok Track Jacket</a>
+                                </div>
+                                <div class="item-price">
+                                    <span>100$</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="load-more">
+                    <span class="circle"></span>
+                    <span class="circle"></span>
+                    <span class="circle"></span>
+                </div>
+            </div>
+        </section>
+    </main>
+<!-- MAIN END -->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
