Закончены блоки header и footer, карточки товара, блок special offer (кроме баннера sale)

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
                     <div class="user-controls flex-container">
                         <a href=""><div class="user-controls-icon icon-search-ic"></div></a>
                         <a href=""><div class="user-controls-icon icon-user-ic"></div></a>
-                        <a href=""><div class="user-controls-icon icon-cart-hover-ic"></div></a>
+                        <a href=""><div class="user-controls-icon icon-cart-ic"><span>1</span></div></a>
                     </div>
 
                 </div>
@@ -74,6 +74,8 @@
                         <div class="title big orange-text">
                             <span>FULL WINTER KIT</span>
                         </div>
+                        <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
+                        <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
                     </div>
                 </div>
             </div>
@@ -81,7 +83,7 @@
         <section class="default-section">
             <div class="container">
                 <div class="title text-center">
-                    <span><span class="orange-text">NEW</span>ARRIVALS</span>
+                    <span><span class="orange-text">NEW </span>ARRIVALS</span>
                 </div>
                 <span class="subtitle text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
                 <div class="new-item">
@@ -102,7 +104,7 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href=""><img src="img/product-Img.png"></a>
+                                    <a href=""><img src="img/item-img-2.png"></a>
                                 </div>
                                 <div class="item-title">
                                     <a href="">Reebok Track Jacket</a>
@@ -115,7 +117,7 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href=""><img src="img/product-Img.png"></a>
+                                    <a href=""><img src="img/item-img-3.png"></a>
                                 </div>
                                 <div class="item-title">
                                     <a href="">Reebok Track Jacket</a>
@@ -128,7 +130,7 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href=""><img src="img/product-Img.png"></a>
+                                    <a href=""><img src="img/item-img-3.png"></a>
                                 </div>
                                 <div class="item-title">
                                     <a href="">Reebok Track Jacket</a>
@@ -145,11 +147,82 @@
                     <span class="circle"></span>
                     <span class="circle"></span>
                 </div>
+                <div class="special-offer">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="special-offer-sale flex-container justify-sp-between aling-center">
+                                <div class="sale-banner">
+                                    <div class="sale-banner-content">
+                                        <h6>Sale</h6>
+                                        <span>50%</span>
+                                    </div>
+                                </div>
+                                <div class="sale-description">
+                                    <h5>FULL WINTER KIT</h5>
+                                    <span>Half Jacket + Skiny Trousers + Boot leather</span>
+                                </div>
+                                <div class="sale-price orange-text">
+                                    <div class="sale-price-icon icon-add-to-cart-ic"></div>
+                                    <span>120<span class="sale-price-value">$</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="special-offer-area text-center">
+                                <span class="offer-area-text">adv <span class="orange-text">area</span></span>
+                                <span class="offer-area-numbers">100 x 470</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="default-section">
+            <div class="container">
+                <div class="title text-center">
+                    <span><span class="orange-text">BEST </span>SALES</span>
+                </div>
+                <span class="subtitle text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
             </div>
         </section>
     </main>
 <!-- MAIN END -->
+    <footer>
+        
+            <div class="container">
+            <div class="flex-container justify-sp-between">
+                <div class="footer-logo">
+                    <img src="img/logo.png">
+                    <span>shopy c 2015 . your copy right here</span>
+                </div>
+                <ul class="footer-col">
+                    <li><a href="">about us</a></li>
+                    <li><a href="">contact us</a></li>
+                    <li><a href="">support</a></li>
+                </ul>
+                <ul class="footer-col">
+                    <li><a href="">our feed</a></li>
+                    <li><a href="">terms and conditions</a></li>
+                    <li><a href="">our privacy</a></li>
+                </ul>
+                <ul class="footer-col">
+                    <li><a href="">join us</a></li>
+                    <li><a href="">live support</a></li>
+                </ul>
+                <div class="payment-methods">
+                    <span>Payment Methods</span>
+                    <ul class="cards-icons flex-container">
+                        <li class="icon-amex-ic"></li>
+                        <li class="icon-no-name-cart-1-ic"></li>
+                        <li class="icon-visa-ic"></li>
+                        <li class="icon-master-cart-ic"></li>
+                        <li class="icon-no-name-cart-2-ic"></li>
+                    </ul>
+                </div>
+            </div>
+            </div>
 
+    </footer>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
