--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,10 @@
                         </div>
                         <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
                         <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                        <div class="items-carousel-price">   
+                            <span>Price : 120$</span>
+                            <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                        </div> 
                     </div>
                 </div>
             </div>
@@ -93,11 +97,29 @@
                                 <div class="item-img">
                                     <a href=""><img src="img/product-Img.png"></a>
                                 </div>
-                                <div class="item-title">
-                                    <a href="">Reebok Track Jacket</a>
-                                </div>
-                                <div class="item-price">
-                                    <span>100$</span>
+                                <div class="item-description">
+                                    <div class="item-title">
+                                        <a href="">Reebok Track Jacket</a>
+                                    </div>
+                                    <div class="item-price">
+                                        <span>100$</span>
+                                    </div>
+                                    <div class="more-info-on-hover">
+                                        <div class="size">
+                                            sizes  :  s - m - l - xl
+                                        </div>
+                                        <ul class="colors">
+                                            <li class="red-bg"></li>
+                                            <li class="black-bg"></li>
+                                            <li class="blue-bg"></li>
+                                            <li class="green-bg"></li>
+                                        </ul>
+                                        <ul class="item-controls">
+                                            <li><a href=""><span class="custom-icon icon-share-ic"></span></a></li>
+                                            <li><a href=""><span class="custom-icon icon-add-to-cart-ic"></span></a></li>
+                                            <li><a href=""><span class="custom-icon icon-like-ic"></span></a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -106,11 +128,29 @@
                                 <div class="item-img">
                                     <a href=""><img src="img/item-img-2.png"></a>
                                 </div>
-                                <div class="item-title">
-                                    <a href="">Reebok Track Jacket</a>
-                                </div>
-                                <div class="item-price">
-                                    <span>100$</span>
+                                <div class="item-description">
+                                    <div class="item-title">
+                                        <a href="">Reebok Track Jacket</a>
+                                    </div>
+                                    <div class="item-price">
+                                        <span>100$</span>
+                                    </div>
+                                    <div class="more-info-on-hover">
+                                        <div class="size">
+                                            sizes  :  s - m - l - xl
+                                        </div>
+                                        <ul class="colors">
+                                            <li class="red-bg"></li>
+                                            <li class="black-bg"></li>
+                                            <li class="blue-bg"></li>
+                                            <li class="green-bg"></li>
+                                        </ul>
+                                        <ul class="item-controls">
+                                            <li><a href=""><span class="custom-icon icon-share-ic"></span></a></li>
+                                            <li><a href=""><span class="custom-icon icon-add-to-cart-ic"></span></a></li>
+                                            <li><a href=""><span class="custom-icon icon-like-ic"></span></a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -119,11 +159,29 @@
                                 <div class="item-img">
                                     <a href=""><img src="img/item-img-3.png"></a>
                                 </div>
-                                <div class="item-title">
-                                    <a href="">Reebok Track Jacket</a>
-                                </div>
-                                <div class="item-price">
-                                    <span>100$</span>
+                                <div class="item-description">
+                                    <div class="item-title">
+                                        <a href="">Reebok Track Jacket</a>
+                                    </div>
+                                    <div class="item-price">
+                                        <span>100$</span>
+                                    </div>
+                                    <div class="more-info-on-hover">
+                                        <div class="size">
+                                            sizes  :  s - m - l - xl
+                                        </div>
+                                        <ul class="colors">
+                                            <li class="red-bg"></li>
+                                            <li class="black-bg"></li>
+                                            <li class="blue-bg"></li>
+                                            <li class="green-bg"></li>
+                                        </ul>
+                                        <ul class="item-controls">
+                                            <li><a href=""><span class="custom-icon icon-share-ic"></span></a></li>
+                                            <li><a href=""><span class="custom-icon icon-add-to-cart-ic"></span></a></li>
+                                            <li><a href=""><span class="custom-icon icon-like-ic"></span></a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -132,11 +190,29 @@
                                 <div class="item-img">
                                     <a href=""><img src="img/item-img-3.png"></a>
                                 </div>
-                                <div class="item-title">
-                                    <a href="">Reebok Track Jacket</a>
-                                </div>
-                                <div class="item-price">
-                                    <span>100$</span>
+                                <div class="item-description">
+                                    <div class="item-title">
+                                        <a href="">Reebok Track Jacket</a>
+                                    </div>
+                                    <div class="item-price">
+                                        <span>100$</span>
+                                    </div>
+                                    <div class="more-info-on-hover">
+                                        <div class="size">
+                                            sizes  :  s - m - l - xl
+                                        </div>
+                                        <ul class="colors">
+                                            <li class="red-bg"></li>
+                                            <li class="black-bg"></li>
+                                            <li class="blue-bg"></li>
+                                            <li class="green-bg"></li>
+                                        </ul>
+                                        <ul class="item-controls">
+                                            <li><a href=""><span class="custom-icon icon-share-ic"></span></a></li>
+                                            <li><a href=""><span class="custom-icon icon-add-to-cart-ic"></span></a></li>
+                                            <li><a href=""><span class="custom-icon icon-like-ic"></span></a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -152,9 +228,12 @@
                         <div class="col-md-7">
                             <div class="special-offer-sale flex-container justify-sp-between aling-center">
                                 <div class="sale-banner">
-                                    <div class="sale-banner-content">
-                                        <h6>Sale</h6>
-                                        <span>50%</span>
+                                    <div class="light-orange-bg"></div>
+                                    <div class="orange-bg">
+                                        <div id="sale-banner-content">
+                                            <h6>Sale</h6>
+                                            <span>50%</span>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="sale-description">
@@ -183,6 +262,104 @@
                     <span><span class="orange-text">BEST </span>SALES</span>
                 </div>
                 <span class="subtitle text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="item-mini">
+                            <div class="flex-container">
+                                <div class="item-mini-img">
+                                    <img src="img/item-img-1-min.png">
+                                </div>
+                                <div class="item-mini-description">
+                                    <span class="item-mini-title">Reebok Track Jacket</span>
+                                    <div class="item-mini-info flex-container orange-text justify-sp-between aling-center">
+                                        <ul class="item-mini-stars flex-container">
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                        </ul>
+                                        <span class="item-mini-price">100$ </span>
+                                    </div>
+                                    <div class="add-to-cart-hover flex-container aling-center">
+                                        <div class="icon-add-to-cart-hover-ic"></div>
+                                        <span class="orange-text">add to cart</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="item-mini">
+                            <div class="flex-container">
+                                <div class="item-mini-img">
+                                    <img src="img/item-img-1-min.png">
+                                </div>
+                                <div class="item-mini-description">
+                                    <span class="item-mini-title">Reebok Track Jacket</span>
+                                    <div class="item-mini-info flex-container orange-text justify-sp-between aling-center">
+                                        <ul class="item-mini-stars flex-container">
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                        </ul>
+                                        <span class="item-mini-price">100$ </span>
+                                    </div>
+                                    <div class="add-to-cart-hover flex-container aling-center">
+                                        <div class="icon-add-to-cart-hover-ic"></div>
+                                        <span class="orange-text">add to cart</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="item-mini">
+                            <div class="flex-container">
+                                <div class="item-mini-img">
+                                    <img src="img/item-img-1-min.png">
+                                </div>
+                                <div class="item-mini-description">
+                                    <span class="item-mini-title">Reebok Track Jacket</span>
+                                    <div class="item-mini-info flex-container orange-text justify-sp-between aling-center">
+                                        <ul class="item-mini-stars flex-container">
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                        </ul>
+                                        <span class="item-mini-price">100$ </span>
+                                    </div>
+                                    <div class="add-to-cart-hover flex-container aling-center">
+                                        <div class="icon-add-to-cart-hover-ic"></div>
+                                        <span class="orange-text">add to cart</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="default-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="subscribe-form white-bg flex-container aling-center justify-sp-between">
+                            <div class="subscribe-description">
+                                <span class="subscribe-description-title orange-text">News Letter</span>
+                                <span class="subscribe-description-text">join us now to get all news and special offers</span>
+                            </div>
+                            <form class="flex-container aling-center">
+                                <div class="subscribe-input-group">
+                                    <label for="subscribeEmail" class="custom-icon icon-mail-ic"></label>
+                                    <input type="email" class="subscribe-input" id="subscribeEmail" placeholder="type your email here">
+                                </div>
+                                <button class="btn btn-default orange-bg">join us</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
