Готова страница Category

--- a/app/index.html
+++ b/app/index.html
@@ -95,11 +95,11 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href=""><img src="img/product-Img.png"></a>
+                                    <a href="category.html"><img src="img/product-Img.png"></a>
                                 </div>
                                 <div class="item-description">
                                     <div class="item-title">
-                                        <a href="">Reebok Track Jacket</a>
+                                        <a href="category.html">Reebok Track Jacket</a>
                                     </div>
                                     <div class="item-price">
                                         <span>100$</span>
@@ -126,11 +126,11 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href=""><img src="img/item-img-2.png"></a>
+                                    <a href="category.html"><img src="img/item-img-2.png"></a>
                                 </div>
                                 <div class="item-description">
                                     <div class="item-title">
-                                        <a href="">Reebok Track Jacket</a>
+                                        <a href="category.html">Reebok Track Jacket</a>
                                     </div>
                                     <div class="item-price">
                                         <span>100$</span>
@@ -157,11 +157,11 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href=""><img src="img/item-img-3.png"></a>
+                                    <a href="category.html"><img src="img/item-img-3.png"></a>
                                 </div>
                                 <div class="item-description">
                                     <div class="item-title">
-                                        <a href="">Reebok Track Jacket</a>
+                                        <a href="category.html">Reebok Track Jacket</a>
                                     </div>
                                     <div class="item-price">
                                         <span>100$</span>
@@ -188,7 +188,7 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href=""><img src="img/item-img-3.png"></a>
+                                    <a href="category.html"><img src="img/item-img-3.png"></a>
                                 </div>
                                 <div class="item-description">
                                     <div class="item-title">
@@ -276,7 +276,7 @@
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star light-grey-text"></i></li>
                                         </ul>
                                         <span class="item-mini-price">100$ </span>
                                     </div>
@@ -301,7 +301,7 @@
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star light-grey-text"></i></li>
                                         </ul>
                                         <span class="item-mini-price">100$ </span>
                                     </div>
@@ -326,7 +326,7 @@
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
-                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star light-grey-text"></i></li>
                                         </ul>
                                         <span class="item-mini-price">100$ </span>
                                     </div>
