--- a/app/category.html
+++ b/app/category.html
@@ -27,7 +27,7 @@
 <body>
 <!-- HEADER START -->
     <header>
-        <div class="top-header">
+        <div class="top-header white-bg">
             <div class="container">
                 <div class="flex-container justify-sp-between">
                     <ul class="phone-list flex-container aling-center">
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="bottom-header">
+        <div class="bottom-header white-bg">
             <div class="container">
                 <div class="flex-container justify-sp-between aling-center">
                     <div class="logo">
@@ -437,30 +437,32 @@
                             <span class="circle"></span>
                         </div>
                     </div>
-                    <section class="default-section">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-xs-12">
-                                    <div class="subscribe-form white-bg flex-container aling-center justify-sp-between">
-                                        <div class="subscribe-description">
-                                            <span class="subscribe-description-title orange-text">News Letter</span>
-                                            <span class="subscribe-description-text">join us now to get all news and special offers</span>
-                                        </div>
-                                        <form class="flex-container aling-center">
-                                            <div class="subscribe-input-group">
-                                                <label for="subscribeEmail" class="custom-icon icon-mail-ic"></label>
-                                                <input type="email" class="subscribe-input" id="subscribeEmail" placeholder="type your email here">
-                                            </div>
-                                            <button class="btn btn-default orange-bg">join us</button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
                 </div>
             </div>
         </div>
+        <section class="default-section">
+            <div class="container">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="subscribe-form white-bg flex-container aling-center justify-sp-between">
+                                <div class="subscribe-description">
+                                    <span class="subscribe-description-title orange-text">News Letter</span>
+                                    <span class="subscribe-description-text">join us now to get all news and special offers</span>
+                                </div>
+                                <form class="flex-container aling-center">
+                                    <div class="subscribe-input-group">
+                                        <label for="subscribeEmail" class="custom-icon icon-mail-ic"></label>
+                                        <input type="email" class="subscribe-input" id="subscribeEmail" placeholder="type your email here">
+                                    </div>
+                                    <button class="btn btn-default orange-bg">join us</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 <!-- MAIN END -->
     <footer>
