--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 <body>
 <!-- HEADER START -->
     <header>
-        <div class="top-header">
+        <div class="top-header white-bg">
             <div class="container">
                 <div class="flex-container justify-sp-between">
                     <ul class="phone-list flex-container aling-center">
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <div class="bottom-header">
+        <div class="bottom-header white-bg">
             <div class="container">
                 <div class="flex-container justify-sp-between aling-center">
                     <div class="logo">
@@ -223,6 +223,10 @@
                     <span class="circle"></span>
                     <span class="circle"></span>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
                 <div class="special-offer">
                     <div class="row">
                         <div class="col-md-7">
