Сделана страница товара, застилизирован класс range на странице категории

--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,16 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
+    <!-- jQuery styles -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="css/flexslider.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+
+
     <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/sprite.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,9 +34,9 @@
         <div class="top-header white-bg">
             <div class="container">
                 <div class="flex-container justify-sp-between">
-                    <ul class="phone-list flex-container aling-center">
-                        <li class="flex-container aling-center"><span class="custom-icon icon-mail-ic"></span>info@shopy.com</li>
-                        <li class="flex-container aling-center"><span class="custom-icon icon-phone-book-ic"></span>996 - 5553 - 453</li>
+                    <ul class="phone-list flex-container align-center">
+                        <li class="flex-container align-center"><span class="custom-icon icon-mail-ic"></span>info@shopy.com</li>
+                        <li class="flex-container align-center"><span class="custom-icon icon-phone-book-ic"></span>996 - 5553 - 453</li>
                     </ul>
                     <nav class="social-nav">
                         <a href=""><i class="fa fa-facebook"></i></a>
@@ -43,13 +49,13 @@
         </div>
         <div class="bottom-header white-bg">
             <div class="container">
-                <div class="flex-container justify-sp-between aling-center">
+                <div class="flex-container justify-sp-between align-center">
                     <div class="logo">
                         <img src="img/logo.png">
                     </div>
                     <ul class="header-nav flex-container">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Products</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="category.html">Products</a></li>
                         <li><a href="">Hot Deals</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Contact</a></li>
@@ -67,7 +73,7 @@
 <!-- HEADER END -->
 <!-- MAIN START -->
     <main>
-        <section class="items-carousel flex-container aling-center">
+        <section class="items-carousel flex-container align-center">
             <div class="container">
                 <div class="flex-container">
                     <div class="items-carousel-description">
@@ -95,11 +101,11 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href="category.html"><img src="img/product-Img.png"></a>
+                                    <a href="product.html"><img src="img/product-Img.png"></a>
                                 </div>
                                 <div class="item-description">
                                     <div class="item-title">
-                                        <a href="category.html">Reebok Track Jacket</a>
+                                        <a href="product.html">Reebok Track Jacket</a>
                                     </div>
                                     <div class="item-price">
                                         <span>100$</span>
@@ -126,11 +132,11 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href="category.html"><img src="img/item-img-2.png"></a>
+                                    <a href="product.html"><img src="img/item-img-2.png"></a>
                                 </div>
                                 <div class="item-description">
                                     <div class="item-title">
-                                        <a href="category.html">Reebok Track Jacket</a>
+                                        <a href="product.html">Reebok Track Jacket</a>
                                     </div>
                                     <div class="item-price">
                                         <span>100$</span>
@@ -157,11 +163,11 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href="category.html"><img src="img/item-img-3.png"></a>
+                                    <a href="product.html"><img src="img/item-img-3.png"></a>
                                 </div>
                                 <div class="item-description">
                                     <div class="item-title">
-                                        <a href="category.html">Reebok Track Jacket</a>
+                                        <a href="product.html">Reebok Track Jacket</a>
                                     </div>
                                     <div class="item-price">
                                         <span>100$</span>
@@ -188,11 +194,11 @@
                         <div class="col-md-3">
                             <div class="item">
                                 <div class="item-img">
-                                    <a href="category.html"><img src="img/item-img-3.png"></a>
+                                    <a href="product.html"><img src="img/item-img-3.png"></a>
                                 </div>
                                 <div class="item-description">
                                     <div class="item-title">
-                                        <a href="">Reebok Track Jacket</a>
+                                        <a href="product.html">Reebok Track Jacket</a>
                                     </div>
                                     <div class="item-price">
                                         <span>100$</span>
@@ -230,7 +236,7 @@
                 <div class="special-offer">
                     <div class="row">
                         <div class="col-md-7">
-                            <div class="special-offer-sale flex-container justify-sp-between aling-center">
+                            <div class="special-offer-sale flex-container justify-sp-between align-center">
                                 <div class="sale-banner">
                                     <div class="light-orange-bg"></div>
                                     <div class="orange-bg">
@@ -275,7 +281,7 @@
                                 </div>
                                 <div class="item-mini-description">
                                     <span class="item-mini-title">Reebok Track Jacket</span>
-                                    <div class="item-mini-info flex-container orange-text justify-sp-between aling-center">
+                                    <div class="item-mini-info flex-container orange-text justify-sp-between align-center">
                                         <ul class="item-mini-stars flex-container">
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
@@ -284,7 +290,7 @@
                                         </ul>
                                         <span class="item-mini-price">100$ </span>
                                     </div>
-                                    <div class="add-to-cart-hover flex-container aling-center">
+                                    <div class="add-to-cart-hover flex-container align-center">
                                         <div class="icon-add-to-cart-hover-ic"></div>
                                         <span class="orange-text">add to cart</span>
                                     </div>
@@ -300,7 +306,7 @@
                                 </div>
                                 <div class="item-mini-description">
                                     <span class="item-mini-title">Reebok Track Jacket</span>
-                                    <div class="item-mini-info flex-container orange-text justify-sp-between aling-center">
+                                    <div class="item-mini-info flex-container orange-text justify-sp-between align-center">
                                         <ul class="item-mini-stars flex-container">
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
@@ -309,7 +315,7 @@
                                         </ul>
                                         <span class="item-mini-price">100$ </span>
                                     </div>
-                                    <div class="add-to-cart-hover flex-container aling-center">
+                                    <div class="add-to-cart-hover flex-container align-center">
                                         <div class="icon-add-to-cart-hover-ic"></div>
                                         <span class="orange-text">add to cart</span>
                                     </div>
@@ -325,7 +331,7 @@
                                 </div>
                                 <div class="item-mini-description">
                                     <span class="item-mini-title">Reebok Track Jacket</span>
-                                    <div class="item-mini-info flex-container orange-text justify-sp-between aling-center">
+                                    <div class="item-mini-info flex-container orange-text justify-sp-between align-center">
                                         <ul class="item-mini-stars flex-container">
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
@@ -334,7 +340,7 @@
                                         </ul>
                                         <span class="item-mini-price">100$ </span>
                                     </div>
-                                    <div class="add-to-cart-hover flex-container aling-center">
+                                    <div class="add-to-cart-hover flex-container align-center">
                                         <div class="icon-add-to-cart-hover-ic"></div>
                                         <span class="orange-text">add to cart</span>
                                     </div>
@@ -349,12 +355,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <div class="subscribe-form white-bg flex-container aling-center justify-sp-between">
+                        <div class="subscribe-form white-bg flex-container align-center justify-sp-between">
                             <div class="subscribe-description">
                                 <span class="subscribe-description-title orange-text">News Letter</span>
                                 <span class="subscribe-description-text">join us now to get all news and special offers</span>
                             </div>
-                            <form class="flex-container aling-center">
+                            <form class="flex-container align-center">
                                 <div class="subscribe-input-group">
                                     <label for="subscribeEmail" class="custom-icon icon-mail-ic"></label>
                                     <input type="email" class="subscribe-input" id="subscribeEmail" placeholder="type your email here">
@@ -406,7 +412,11 @@
     </footer>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.flexslider-min.js"></script>
+<script src="js/jquery.formstyler.min.js"></script>
+<script src="js/plugins.min.js"></script>
 </body>
 </html>
